--- a/.gitignore
+++ b/.gitignore
@@ -211,7 +211,7 @@ Generated_Code/
 # because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
-outros*/
+Outros*/
 UpgradeLog*.XML
 UpgradeLog*.htm
 
